# ThreadVille

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
bridges/: bridges.ino
conf/: config.conf
include/: .queues.h.swp  Node.h  city.h  confReader.h  mypthread.h  queue.h  queues.h  serialBridge.h  vehicle.h
lib/: Makefile  mypthread.c  queue.c
src/: .queues.c.swp  city.c  confReader.c  queues.c  serialBridge.c  vehicle.c
